test_outputs/connlist/exposure_matched_and_unmatched_rules_test_focus_workload_hello-world_workload-a_ingress_explain_exposure_output.txt

##########################################
# Specific connections and their reasons #
##########################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255 => hello-world/workload-a[Deployment]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy 'hello-world/combined-ingress-rules' selects hello-world/workload-a[Deployment], but 0.0.0.0-255.255.255.255 is not allowed by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between hello-world/workload-b[Deployment] => hello-world/workload-a[Deployment]:

Allowed connections:
	Allowed TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Allowed)
			NetworkPolicy 'hello-world/combined-ingress-rules' allows connections by Ingress rule #1


Exposure Analysis Result:
Ingress Exposure:
hello-world/workload-a[Deployment] 	<= 	entire-cluster : TCP 8050
